# copilotscan

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  copilotscan_report.html  copilotscan_report_20260411_103618.html  pyproject.toml  rapport_test.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: app-registration.md  configuration.md  risk-engine.md  technical-reference.md
examples/: basic_scan.py  ci_partial_mode.py  config.yaml.example
scripts/: setup-azure.ps1  setup-azure.sh
src/copilotscan/: __init__.py  __main__.py  auth.py  exceptions.py  models.py  report_generator.py  risk_engine.py
src/copilotscan/collectors/: __init__.py  graph.py  purview.py
src/copilotscan/templates/: report_template.html
tests/: test_auth.py  test_report_generator.py  test_risk_engine.py
